--- a/reflatex.bib
+++ b/reflatex.bib
@@ -78,6 +78,16 @@
   month = {Setembro}
 }
 
+@MISC{AUTOVETORES-DEDUCAO,
+  author = {L. El Ghaoui},
+  title = {Hyper-Textbook: Optimization Models and Applications},
+  year = {2013},
+  owner = {telmo},
+  timestamp = {2013.11.18},
+  url = {https://inst.eecs.berkeley.edu/~ee127a/book/login/index.html},
+  urlaccessdate = {30 de julho de 2011}
+}
+
 @MISC{GIT,
   author = {GIT},
   title = {Git - Fast Version Control System},
@@ -108,19 +118,9 @@
   year = {2006},
   author = {Gonzalez, Rafael C. and Woods, Richard E.},
   address = {Upper Saddle River, NJ, USA},
-  __markedentry = {[telmo:]},
   isbn = {013168728X},
   owner = {telmo},
   timestamp = {2013.11.15}
-}
-
-@MISC{FUZZYLOGICTUTORIAL,
-  author = {Kaehler},
-  title = {Fuzzy Logic Tutorial},
-  year = {1998},
-  timestamp = {1998.03.01},
-  url = {http://www.seattlerobotics.org/encoder/mar98/fuz/flindex.html},
-  urlaccessdate = {30 de julho de 2011}
 }
 
 @ARTICLE{KOSKO,
@@ -131,6 +131,19 @@
   volume = {24},
   pages = {65-75},
   number = {1}
+}
+
+@BOOK{AUTOVETORES,
+  title = {Linear algebra with applications},
+  publisher = {Prentice Hall},
+  year = {1998},
+  author = {Leon, S.J.},
+  __markedentry = {[telmo:6]},
+  isbn = {9780138493080},
+  lccn = {97028298},
+  owner = {telmo},
+  timestamp = {2013.11.18},
+  url = {http://books.google.ie/books?id=BeAZAQAAIAAJ}
 }
 
 @ARTICLE{USO-COMPONENTES-ELETRONICOS,
@@ -254,7 +267,7 @@
   year = {2004},
   volume = {4},
   pages = {3099-3104 vol.4},
-  __markedentry = {[telmo:6]},
+  __markedentry = {[telmo:]},
   doi = {10.1109/ICSMC.2004.1400815},
   issn = {1062-922X},
   keywords = {feature extraction;image motion analysis;object detection;background
