--- a/reflatex.bib
+++ b/reflatex.bib
@@ -221,8 +221,34 @@
   title = {Image Enhancement and Analysis},
   year = {2013},
   owner = {telmo},
-  timestamp = {2013.11.16},
+  timestamp = {2013.11.16@MISC{MATHWORKS-HELP,
+	
+	  author = {MathWorks},
+	
+	  title = {Image Enhancement and Analysis},
+	
+	  year = {2013},
+	
+	  owner = {telmo},
+	
+	  timestamp = {2013.11.16},
+	
+	  url = {http://www.mathworks.com/help/images/image-enhancement-and-analysis.html},
+	
+	  urlaccessdate = {06 de Março de 2012}
+	
+	}},
   url = {http://www.mathworks.com/help/images/image-enhancement-and-analysis.html},
+  urlaccessdate = {06 de Março de 2012}
+}
+
+@MISC{MATHWORKS-HELP-2,
+  author = {MathWorks},
+  title = {regionprops},
+  year = {2013},
+  owner = {telmo},
+  timestamp = {2013.11.19},
+  url = {http://www.mathworks.com/help/images/ref/regionprops.html},
   urlaccessdate = {06 de Março de 2012}
 }
 
@@ -337,6 +363,16 @@
   owner = {telmo},
   timestamp = {2013.11.16},
   url = {http://en.wikipedia.org/wiki/Balanced\_histogram\_thresholding},
+  urlaccessdate = {29 de julho de 2011}
+}
+
+@MISC{IMAGEM-MOMENTO-INERCIA,
+  author = {WIKIPEDIA},
+  title = {Second moment of area},
+  year = {2013},
+  owner = {telmo},
+  timestamp = {2013.11.19},
+  url = {http://en.wikipedia.org/wiki/Second\_moment\_of\_area},
   urlaccessdate = {29 de julho de 2011}
 }
 
